[gd_scene load_steps=12 format=3 uid="uid://dvml8ovnrwuh1"]

[ext_resource type="Script" path="res://Assets/Scripts/Gem.gd" id="1_bw28t"]
[ext_resource type="Script" path="res://Assets/Scripts/Helpers/PIDControllerJoint.gd" id="2_iy1q4"]
[ext_resource type="Script" path="res://Assets/Scripts/VisionSensor.gd" id="2_vxi8p"]
[ext_resource type="Script" path="res://Assets/Scripts/SlowSpin.gd" id="3_1j0yt"]
[ext_resource type="Script" path="res://Assets/Scripts/PulseColor.gd" id="4_80odh"]
[ext_resource type="Texture2D" uid="uid://da83q1k2f1lxi" path="res://Assets/Art/Items/LargeGem.png" id="4_id5oj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pagth"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_mnd3d"]
resource_local_to_scene = true
radius = 29.0

[sub_resource type="CircleShape2D" id="CircleShape2D_twypt"]
resource_local_to_scene = true
radius = 219.037

[sub_resource type="Gradient" id="Gradient_opurg"]
offsets = PackedFloat32Array(0, 0.58011)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hl7ol"]
gradient = SubResource("Gradient_opurg")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="LargeGem" type="RigidBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_bw28t")
value = 5
canAttract = true

[node name="PIDControllerJoint2D" type="Node2D" parent="."]
script = ExtResource("2_iy1q4")
onlyTrackNode = true
disableInDist = false

[node name="PhysicsCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pagth")

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_mnd3d")

[node name="AutoAttractArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false
script = ExtResource("2_vxi8p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAttractArea"]
shape = SubResource("CircleShape2D_twypt")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.623529, 0, 0.756863, 1)
scale = Vector2(0.065, 0.065)
texture = ExtResource("4_id5oj")
script = ExtResource("3_1j0yt")

[node name="Shadow" type="Polygon2D" parent="Sprite2D"]
visible = false
position = Vector2(0, 5)
scale = Vector2(9.446, 11.749)
color = Color(0.109804, 0.109804, 0.109804, 0.631373)
texture = SubResource("GradientTexture2D_hl7ol")
polygon = PackedVector2Array(-50, -50, 50, -50, 33, 40, -33, 40, -0.5, -42.2, -0.58, -33.3, 1, -12, -0.5, 26, -1, 40, -25.8, -34, 25.8, -34, -25.5, -10, 25.5, -10, -22.5, 10, 22.5, 10, -20, 27, 20, 27)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64, 32, 6.4, 32, 19.2, 32, 32, 32, 44.8, 32, 57.6, 12.8, 12.8, 51.2, 12.8, 12.8, 25.6, 51.2, 25.6, 12.8, 38.4, 51.2, 38.4, 12.8, 51.2, 51.2, 51.2)
polygons = [PackedInt32Array(0, 9, 4), PackedInt32Array(0, 1, 4), PackedInt32Array(1, 10, 4), PackedInt32Array(10, 12, 1), PackedInt32Array(9, 0, 11), PackedInt32Array(9, 11, 5), PackedInt32Array(5, 12, 10), PackedInt32Array(11, 6, 5), PackedInt32Array(6, 12, 5), PackedInt32Array(11, 13, 6), PackedInt32Array(13, 7, 6), PackedInt32Array(6, 14, 12), PackedInt32Array(6, 7, 14), PackedInt32Array(13, 15, 7), PackedInt32Array(7, 8, 15), PackedInt32Array(7, 8, 16), PackedInt32Array(7, 16, 14), PackedInt32Array(15, 3, 13), PackedInt32Array(3, 11, 13), PackedInt32Array(3, 0, 11), PackedInt32Array(8, 2, 16), PackedInt32Array(8, 3, 15), PackedInt32Array(8, 3, 2), PackedInt32Array(16, 2, 14), PackedInt32Array(14, 12, 2), PackedInt32Array(12, 1, 2), PackedInt32Array(9, 5, 4), PackedInt32Array(5, 10, 4)]
internal_vertex_count = 13

[node name="CentralGlow" type="Polygon2D" parent="Sprite2D"]
position = Vector2(0, 5)
scale = Vector2(10.701, 13.31)
color = Color(0.623529, 0, 0.756863, 0.4)
texture = SubResource("GradientTexture2D_hl7ol")
polygon = PackedVector2Array(-50, -50, 50, -50, 33, 40, -33, 40, -0.5, -42.2, -0.58, -33.3, 1, -12, -0.5, 26, -1, 40, -25.8, -34, 25.8, -34, -25.5, -10, 25.5, -10, -22.5, 10, 22.5, 10, -20, 27, 20, 27)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64, 32, 6.4, 32, 19.2, 32, 32, 32, 44.8, 32, 57.6, 12.8, 12.8, 51.2, 12.8, 12.8, 25.6, 51.2, 25.6, 12.8, 38.4, 51.2, 38.4, 12.8, 51.2, 51.2, 51.2)
polygons = [PackedInt32Array(0, 9, 4), PackedInt32Array(0, 1, 4), PackedInt32Array(1, 10, 4), PackedInt32Array(10, 12, 1), PackedInt32Array(9, 0, 11), PackedInt32Array(9, 11, 5), PackedInt32Array(5, 12, 10), PackedInt32Array(11, 6, 5), PackedInt32Array(6, 12, 5), PackedInt32Array(11, 13, 6), PackedInt32Array(13, 7, 6), PackedInt32Array(6, 14, 12), PackedInt32Array(6, 7, 14), PackedInt32Array(13, 15, 7), PackedInt32Array(7, 8, 15), PackedInt32Array(7, 8, 16), PackedInt32Array(7, 16, 14), PackedInt32Array(15, 3, 13), PackedInt32Array(3, 11, 13), PackedInt32Array(3, 0, 11), PackedInt32Array(8, 2, 16), PackedInt32Array(8, 3, 15), PackedInt32Array(8, 3, 2), PackedInt32Array(16, 2, 14), PackedInt32Array(14, 12, 2), PackedInt32Array(12, 1, 2), PackedInt32Array(9, 5, 4), PackedInt32Array(5, 10, 4)]
internal_vertex_count = 13
script = ExtResource("4_80odh")
pulseRate = 0.4
pulseRange = Vector2(0, 0.4)
