[gd_scene load_steps=12 format=3 uid="uid://caterry5ptusm"]

[ext_resource type="Script" path="res://Assets/Scripts/Gem.gd" id="1_4lir2"]
[ext_resource type="Script" path="res://Assets/Scripts/VisionSensor.gd" id="2_g48jy"]
[ext_resource type="Script" path="res://Assets/Scripts/Helpers/PIDControllerJoint.gd" id="2_iv4v4"]
[ext_resource type="Script" path="res://Assets/Scripts/SlowSpin.gd" id="3_taunh"]
[ext_resource type="Texture2D" uid="uid://cipdxoidxg64a" path="res://Assets/Art/Items/SmallGem.png" id="4_bce00"]
[ext_resource type="Script" path="res://Assets/Scripts/PulseColor.gd" id="4_hi5cn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pagth"]
radius = 15.0333

[sub_resource type="CircleShape2D" id="CircleShape2D_ugpkg"]
resource_local_to_scene = true
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_twypt"]
resource_local_to_scene = true
radius = 219.037

[sub_resource type="Gradient" id="Gradient_opurg"]
offsets = PackedFloat32Array(0, 0.58011)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hl7ol"]
gradient = SubResource("Gradient_opurg")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="SmallGem" type="RigidBody2D"]
collision_layer = 0
collision_mask = 16
script = ExtResource("1_4lir2")
canAttract = true

[node name="PIDControllerJoint2D" type="Node2D" parent="."]
script = ExtResource("2_iv4v4")
onlyTrackNode = true
disableInDist = false

[node name="PhysicsCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pagth")

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_ugpkg")

[node name="AutoAttractArea" type="Area2D" parent="."]
collision_layer = 0
monitorable = false
script = ExtResource("2_g48jy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAttractArea"]
shape = SubResource("CircleShape2D_twypt")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0.854902, 1, 1)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_bce00")
script = ExtResource("3_taunh")

[node name="Shadow" type="Polygon2D" parent="Sprite2D"]
z_index = -1
scale = Vector2(6, 6)
color = Color(0.111197, 0.111197, 0.111197, 1)
texture = SubResource("GradientTexture2D_hl7ol")
polygon = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)

[node name="CentralGlow" type="Polygon2D" parent="Sprite2D"]
scale = Vector2(8, 8)
color = Color(0.855, 0.161, 0.161, 0.4)
texture = SubResource("GradientTexture2D_hl7ol")
polygon = PackedVector2Array(-50, -50, 50, -50, 50, 50, -50, 50)
uv = PackedVector2Array(0, 0, 64, 0, 64, 64, 0, 64)
script = ExtResource("4_hi5cn")
pulseRate = 0.4
pulseRange = Vector2(0, 0.4)
